Fixt footer vertical align
yes, i did that

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,18 +113,18 @@ h2 {
 /* Styles for footer */
 
 footer {
+  display: block;
   background-color: #4b5161;
-  padding: 20px 15px;
+  padding: 40px 15px;
 }
 
 footer p {
-  display: block;
   color: white;
 }
 
 .bottom-logo {
   height: 60px;
-  margin: 10px 0 10px;
+  margin-top: -10px;
 }
 
 .footer-info {
